--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-select": "^5.7.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
